fix initials not showing

--- a/assets/css/style.css
+++ b/assets/css/style.css
@@ -53,6 +53,18 @@
     border-radius: 99px;
 }
 
+.score {
+    position: absolute;
+    top: 15px;
+    right: 110px;
+    font-size: 2rem;
+    color: black;
+    text-align: center;
+    background-color: white;
+    width: 100px;
+    border-radius: 99px;
+}
+
 .content {
     width: 60vw;
     margin-top: 5%;
@@ -62,6 +74,29 @@
     align-items: center;
     background-color: grey;
     box-shadow: 0 0 10px 2px;
+    border-radius: 10px;
+}
+
+.score-card {
+    margin-top: 20%;
+    display: block;
+}
+
+.highscore {
+    font-size: 3rem;
+}
+
+.highscore-input {
+    height: 50px;
+    border-radius: 10px;
+    font-size: 30px;
+    width: 200px;
+}
+
+.submit-button {
+    margin-top: 30%;
+    font-size: 2rem;
+    height: 50px;
     border-radius: 10px;
 }
 
@@ -115,4 +150,5 @@
 
 .button.wrong {
     background-color: red;
+    color: white;
 }
